--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="wrapper">
     <div class="container">
-      <h1>Rulette</h1>
+      <h1>Roulette</h1>
       <div class="numbers"></div>
       <button class="roll">roll!</button>
     </div>
